--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Nunito Regular'), local('Nunito-Regular'), 
+    url(https://fonts.gstatic.com/s/nunito/v11/XRXV3I6Li01BKofINeaBTMnFcQ.woff2) 
+    format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, 
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, 
+    U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'introrustg-base2line';
+  src: url('./Styled/My_Fontspring_Fonts_Order_61589836/Web\ Fonts/introrustg_base2line_macroman/introrustg-base2line-webfont.woff2') format('woff2'),
+      url('./Styled/My_Fontspring_Fonts_Order_61589836/Web\ Fonts/introrustg_base2line_macroman/introrustg-base2line-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
