--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
+  height : 1000vh;
   -moz-osx-font-smoothing: grayscale;
 }
 
